--- a/5_Developement/Others/1_QR코드 만들기.ipynb
+++ b/5_Developement/Others/1_QR코드 만들기.ipynb
@@ -14,7 +14,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "QR코드 만들 주소 입력 google.com\\\n",
@@ -140,7 +140,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "1번째 QR코드 만들 이미지 주소 입력 daum.net\n",
@@ -164,7 +164,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.7.9 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -178,7 +178,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.9"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8a76269b423b4980097cdf6634cad2727457b9abcc61bd96393e1c55d94e8f38"
+   }
   }
  },
  "nbformat": 4,
