--- a/5_Developement/Others/1_QR코드 만들기.ipynb
+++ b/5_Developement/Others/1_QR코드 만들기.ipynb
@@ -14,18 +14,21 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "QR코드 만들 주소 입력 google.com\\\n",
-      "이미지 이름 입력 goo\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'qrcode'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [3], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mos\u001b[39;00m \n\u001b[1;32m----> 2\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mqrcode\u001b[39;00m \n\u001b[0;32m      3\u001b[0m get_ipython()\u001b[39m.\u001b[39msystem(\u001b[39m'\u001b[39m\u001b[39mpip install qrcode\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[0;32m      6\u001b[0m url_b \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mQR코드 만들 주소 입력\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'qrcode'"
      ]
     }
    ],
    "source": [
     "import os \n",
     "import qrcode \n",
-    "#pip install qrcode\n",
+    "!pip install qrcode\n",
     "\n",
     "\n",
     "url_b = input(\"QR코드 만들 주소 입력\")\n",
@@ -164,7 +167,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.9 64-bit",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -178,11 +181,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.9.12"
   },
   "vscode": {
    "interpreter": {
-    "hash": "8a76269b423b4980097cdf6634cad2727457b9abcc61bd96393e1c55d94e8f38"
+    "hash": "19d1d53a962d236aa061289c2ac16dc8e6d9648c89fe79f459ae9a3493bc67b4"
    }
   }
  },
