--- a/1_Visual/plotly/plotly.ipynb
+++ b/1_Visual/plotly/plotly.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "52d399cb",
+   "id": "0d1c2f06",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-29T12:58:45.089870Z",
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a44b8f0",
+   "id": "8444cdb1",
    "metadata": {},
    "source": [
     "## 기본 플럿 생성"
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7eec1fb8",
+   "id": "c24eec63",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-29T13:06:56.780024Z",
@@ -72,27 +72,27 @@
     "                  y=random_y,\n",
     "                  mode='markers')]\n",
     "\n",
-    "pyo.plot(data,filename='scatter.html')"
+    "pyo.plot(data,filename='./output/1.scatter_basic.html')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "a157426f",
+   "execution_count": 2,
+   "id": "07a215df",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-29T13:09:58.749272Z",
-     "start_time": "2022-12-29T13:09:58.718177Z"
+     "end_time": "2022-12-29T14:46:07.688106Z",
+     "start_time": "2022-12-29T14:46:07.660790Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'scatter1.html'"
+       "'./output/2.scatter_fig.html'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,12 +123,12 @@
     "# fig에 데이터, 레이아웃 담고\n",
     "fig = go.Figure(data=data, layout=layout)\n",
     "# fig출력\n",
-    "pyo.plot(fig,filename='scatter1.html')"
+    "pyo.plot(fig,filename='./output/2.scatter_fig.html')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "01b3638d",
+   "id": "c620b9f4",
    "metadata": {},
    "source": [
     "## 라인 차트"
@@ -136,22 +136,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "4746e75a",
+   "execution_count": 3,
+   "id": "5fdf23ff",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-29T13:28:10.096640Z",
-     "start_time": "2022-12-29T13:28:10.069923Z"
+     "end_time": "2022-12-29T14:46:38.514814Z",
+     "start_time": "2022-12-29T14:46:38.487927Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'temp-plot.html'"
+       "'./output/3.line_basic.html'"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -174,27 +174,27 @@
     "\n",
     "fig = go.Figure(data=data, layout=layout)\n",
     "\n",
-    "pyo.plot(fig)"
+    "pyo.plot(fig,filename='./output/3.line_basic.html')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "4d05bf5d",
+   "execution_count": 6,
+   "id": "2d73ea43",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-12-29T13:28:10.345662Z",
-     "start_time": "2022-12-29T13:28:10.317039Z"
+     "end_time": "2022-12-29T14:47:06.264163Z",
+     "start_time": "2022-12-29T14:47:06.236137Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'temp-plot2.html'"
+       "'./output/4.line_fig.html'"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -221,12 +221,12 @@
     "\n",
     "fig = go.Figure(data=data, layout=layout)\n",
     "\n",
-    "pyo.plot(fig,filename='temp-plot2.html')"
+    "pyo.plot(fig,filename='./output/4.line_fig.html')"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ea79e536",
+   "id": "9f472871",
    "metadata": {},
    "source": [
     "## 데이터로 만들기"
@@ -235,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a33eaeb9",
+   "id": "acc528ec",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +248,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "5ac58965",
+   "id": "014075b2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2022-12-29T13:31:18.930152Z",
@@ -267,14 +267,12 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "pwd"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "764e5ae5",
+   "id": "110ec5c9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -313,6 +311,13 @@
    "toc_position": {},
    "toc_section_display": true,
    "toc_window_display": false
+  },
+  "widgets": {
+   "application/vnd.jupyter.widget-state+json": {
+    "state": {},
+    "version_major": 2,
+    "version_minor": 0
+   }
   }
  },
  "nbformat": 4,
