--- a/1_Visual/plotly/dash.ipynb
+++ b/1_Visual/plotly/dash.ipynb
@@ -405,9 +405,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-1-cdefc86b39f9>:5: UserWarning: \n",
+      "The dash_core_components package is deprecated. Please replace\n",
+      "`import dash_core_components as dcc` with `from dash import dcc`\n",
+      "  import dash_core_components as dcc\n",
+      "<ipython-input-1-cdefc86b39f9>:6: UserWarning: \n",
+      "The dash_html_components package is deprecated. Please replace\n",
+      "`import dash_html_components as html` with `from dash import html`\n",
+      "  import dash_html_components as html\n",
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:8050\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [02/Jan/2023 21:38:20] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:38:20] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:38:20] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:38:20] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:38:23] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
    "source": [
     "#######\n",
     "# A very basic Input/Output callback, with State!\n",
@@ -443,6 +476,168 @@
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server()\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Interactive Component"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:8050\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:33] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:33] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:33] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:33] \"GET /_dash-component-suites/dash/dcc/async-slider.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:33] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:35] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:38] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:40] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:41] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:43] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:44] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:53:57] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:54:00] \"GET /_dash-component-suites/dash/dcc/async-slider.js HTTP/1.1\" 304 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:54:00] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:54:03] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:54:04] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:54:09] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:54:11] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:54:13] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:54:16] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:54:22] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:54:25] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 21:54:29] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
+   "source": [
+    "import dash\n",
+    "from dash import dcc\n",
+    "from dash import html\n",
+    "from dash.dependencies import Input, Output\n",
+    "\n",
+    "app = dash.Dash()\n",
+    "\n",
+    "app.layout = html.Div([\n",
+    "                dcc.RangeSlider(id = 'range-slide',\n",
+    "                    min=-10,\n",
+    "                    max=10,\n",
+    "                    marks = {i:str(i) for i in range(-10,11)} ,\n",
+    "                    value=[-1,1]),\n",
+    "                html.H1(id='product')\n",
+    "])\n",
+    "\n",
+    "@app.callback(Output('product','children'),\n",
+    "              [Input('range-slide','value')])\n",
+    "def update_list(value_list):\n",
+    "    return value_list[0] * value_list[1]\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server()           "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Controling Callbacks with Dash statement\n",
+    "입력창을 바로 만들어서 콜백을 받을수도 있음, State를 넣어서 조건부실행 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dash is running on http://127.0.0.1:8050/\n",
+      "\n",
+      " * Serving Flask app '__main__'\n",
+      " * Debug mode: off\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
+      " * Running on http://127.0.0.1:8050\n",
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [02/Jan/2023 22:13:15] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 22:13:15] \"GET /_dash-layout HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 22:13:15] \"GET /_dash-dependencies HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 22:13:15] \"GET /_favicon.ico?v=2.7.1 HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 22:13:15] \"POST /_dash-update-component HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [02/Jan/2023 22:13:27] \"POST /_dash-update-component HTTP/1.1\" 200 -\n"
+     ]
+    }
+   ],
+   "source": [
+    "import dash\n",
+    "from dash import dcc\n",
+    "from dash import html\n",
+    "from dash.dependencies import Input, Output, State\n",
+    "\n",
+    "app = dash.Dash()\n",
+    "app.layout = html.Div([\n",
+    "    dcc.Input(id='number_in', value=1, style={'fintSize':24}),\n",
+    "    html.Button(id='submit_button',\n",
+    "                n_clicks=0,\n",
+    "                children= 'Submit Here',\n",
+    "                style={'fontSize':24}),\n",
+    "    html.H1(id='number_out')\n",
+    "])\n",
+    "\n",
+    "@app.callback(Output('number_out','children'),\n",
+    "            [Input('submit_button','n_clicks')],\n",
+    "            [State('number_in','value')])\n",
+    "def output(n_clicks,number):\n",
+    "    return f'{number} was typed, and the button clicked {n_clicks}times'\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server()    "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hover Over Data"
    ]
   },
   {
@@ -571,11 +766,102 @@
     "    color=hoverData['points'][0]['x']\n",
     "    path = './data/Images/'\n",
     "    return encode_image(path+df[(df['wheels']==wheel) & \\\n",
-    "    (df['color']==color)]['image'].values[0])\n",
+    "    (df['color']==color)]['image'].values[0])ㅗㄷㅁ\n",
     "\n",
     "if __name__ == '__main__':\n",
     "    app.run_server()"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selection Data\n",
+    "선택한 데이터 범위에 대해 계산해주는 동적 그래프 만들기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dash\n",
+    "from dash import dcc\n",
+    "from dash import html\n",
+    "from dash.dependencies import Input,Output\n",
+    "import plotly.graph_objs as go\n",
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "app = dash.Dash()\n",
+    "\n",
+    "np.random.seed(10)\n",
+    "x1 = np.linspace(0.1,5,50)\n",
+    "x2 = np.linspace(5.1,10,50)\n",
+    "y = np.random.randint(0,50,50)\n",
+    "\n",
+    "df1 = pd.DataFrame({'x':x1,\"y\":y})\n",
+    "df2 = pd.DataFrame({'x':x1,\"y\":y})\n",
+    "df3 = pd.DataFrame({'x':x2,\"y\":y})\n",
+    "\n",
+    "\n",
+    "df = pd.concat([df1,df2,df3])\n",
+    "\n",
+    "app.layout = html.Div([\n",
+    "   html.Div([dcc.Graph(id='plot',\n",
+    "    figure={'data':[go.scatter(\n",
+    "        x=df['x'],\n",
+    "        y=df['y'],\n",
+    "        mode='markers')],\n",
+    "        'layout':go.Layout(title='Scatterplot', hovermode='closest')})],\n",
+    "        style={'width':'30%', 'display':'inline-block'}),\n",
+    "    html.Div([\n",
+    "        html.H1(id='density', style={'paddingTop':25})\n",
+    "    ],style={'width':'30%', 'display':'inline-block', 'verticalAlign':'top'})\n",
+    "])\n",
+    "\n",
+    "@app.callback(\n",
+    "    Output('density', 'children'),\n",
+    "    [Input('plot', 'selectedData')])\n",
+    "def find_density(selectedData):\n",
+    "\n",
+    "    return\n",
+    "\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    app.run_server()\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -590,6 +876,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   },
   "toc": {
    "base_numbering": 1,
